--- a/public/placekitten.html
+++ b/public/placekitten.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
-	<title>placekitten, shuffle</title>
+	<title>Segal Surprise</title>
 
 	<!-- fit precisely on mobile devices -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,12 +13,16 @@
 	<!-- Custom CSS -->
 	<link type="text/css" rel="stylesheet" href="css.css">
 	<!-- Google fonts -->
+  
+  <link href='http://fonts.googleapis.com/css?family=Playfair+Display+SC' rel='stylesheet' type='text/css'>
+  
+  
 	<link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 
 
 	<!-- import jQuery -->
 	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-	
+
 	<!-- JS -->
 	<script type="text/javascript" src="js.js"></script>
 
@@ -44,14 +48,14 @@
  -->
  <div class="container-fluid">
  		<header>
- 			<h1>Placekitten</h1>
- 			<p class="message-to-tap">tap image to shuffle</p>
- 			<p class="message-to-hover">hover on image to shuffle<p>
+ 			<h1>Segal Surprise</h1>
+ 			<div class="message-to-tap">click image to shuffle</div>
+ 			
  		</header>
 	 	<img class="img-responsive">
 	 	<footer>
-	 		<div><a href="http://placekitten.com/">&lt;images courtesy of placekitten&gt;</a></div>
-	 		<div><a href="http://www.pkbanks.com" target="_blank">PK Banks</a></div>
+          <div><a href="http://stevensegallery.com">&lt;images courtesy of stevensegallery.com&gt;</a></div>
+          <div><a href="http://www.pkpanks.com">&lt;template by PK Banks&gt;</a></div>
 	 		<div><a href="http://wyncode.co/" target="_blank">Wyncode | Miami, FL</a></div>
 	 	</footer>
 	</div>
